@@ -31,7 +31,7 @@
     <input type="radio" id="milk_id" name="milk_name" class="milk_class" value="Milk"> Milk <br/>
     <input type="radio" id="butter_id" name="butter_name" class="butter_class" value="Butter">Butter
 
-    <div id="div_id" name="div_name" class="div_class">
+    <div id="div_id" name="div_name" class="div_class" title="div_title">
         page-object rocks!
     </div>
 
