@@ -6,14 +6,14 @@ describe PageObject::Elements::Div do
 
   describe "when mapping how to find an element" do
     it "should map watir types to same" do
-      [:class, :id, :text, :index, :xpath].each do |t|
+      [:class, :id, :text, :index, :xpath, :name, :title].each do |t|
         identifier = div.watir_identifier_for t => 'value'
         identifier.keys.first.should == t
       end
     end
 
     it "should map selenium types to same" do
-      [:class, :id, :text, :index, :name, :xpath].each do |t|
+      [:class, :id, :text, :index, :name, :xpath, :title].each do |t|
         key, value = div.selenium_identifier_for t => 'value'
         key.should == t
       end
