@@ -1,6 +1,7 @@
 === Version 0.6.9
 * Enhancements
   * Updated link to be able to identify by title
+  * Updated div to be able to identify by title
 
 === Version 0.6.8 / 2012-6-3
 * Enhancements
